--- a/Views/index.html
+++ b/Views/index.html
@@ -65,3 +65,6 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
+
+<! –– reference: https://github.com/mikhail-cct/ssp-practical ––>
